--- a/NetworkProgrammingP12.csproj
+++ b/NetworkProgrammingP12.csproj
@@ -8,8 +8,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Update="coin25.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="email-settings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="privacy.docx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="privacy.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
